# nano-win

./: .cvsignore  .gitignore  ABOUT-NLS  AUTHORS  BUGS  ChangeLog  ChangeLog.1999-2006  ChangeLog.2007-2015  ChangeLog.pre-2.1  IMPROVEMENTS  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.CVS  README.GIT  README.SVN  README.hacking  THANKS  TODO  UPGRADE  acconfig.h  aclocal.m4  autogen.sh  build_nano-win.cmd  build_nano-win.sh  cgitrc  color.c  config.h.in  config.rpath  configure  configure.ac  configure.in  cut.c  faq.html  files.c  global.c  move.c  nano-regress  (+23 more)
doc/: .cvsignore  .gitignore  Makefile.am  cheatsheet.html  faq.html  nano.1  nano.texi  nanorc.5  nanorc.sample  nanorc.sample.in  rnano.1  sample.nanorc.in
doc/man/: .cvsignore  .gitignore  Makefile.am  nano.1  nanorc.5  rnano.1
doc/man/fr/: .cvsignore  Makefile.am  nano.1  nanorc.5  rnano.1
doc/syntax/: Makefile.am  asm.nanorc  autoconf.nanorc  awk.nanorc  c.nanorc  changelog.nanorc  cmake.nanorc  css.nanorc  debian.nanorc  default.nanorc  elisp.nanorc  fortran.nanorc  gentoo.nanorc  go.nanorc  groff.nanorc  guile.nanorc  html.nanorc  java.nanorc  javascript.nanorc  json.nanorc  lua.nanorc  makefile.nanorc  man.nanorc  mgp.nanorc  mutt.nanorc  nanorc.nanorc  nftables.nanorc  objc.nanorc  ocaml.nanorc  patch.nanorc  perl.nanorc  php.nanorc  po.nanorc  postgresql.nanorc  pov.nanorc  python.nanorc  ruby.nanorc  sh.nanorc  spec.nanorc  tcl.nanorc  (+3 more)
doc/texinfo/: .cvsignore  .gitignore  Makefile.am  nano.texi
intl/: .cvsignore  Makefile  plural.c
m4/: ChangeLog  Makefile.am  aclocal_inc.m4  codeset.m4  gettext.m4  glibc21.m4  iconv.m4  largefile.m4  lcmessage.m4  progtest.m4
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ar.po  bg.po  ca.po  cat-id-tbl.c  cs.po  da.po  de.gmo  de.po  eo.po  es.gmo  es.po  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.po  gl.po  hr.po  hu.po  id.gmo  id.po  is.po  it.gmo  it.po  ja.po  ka.po  kk.po  ko.po  ms.po  nano.pot  nb.po  nl.po  (+20 more)
src/: .cvsignore  Makefile.am  browser.c  chars.c  color.c  cut.c  definitions.h  files.c  global.c  help.c  history.c  move.c  nano.c  nano.h  prompt.c  proto.h  proto.h.gch  prototypes.h  rcfile.c  search.c  text.c  utils.c  winio.c
syntax/: Makefile.am  asm.nanorc  autoconf.nanorc  awk.nanorc  c.nanorc  changelog.nanorc  css.nanorc  default.nanorc  elisp.nanorc  gentoo.nanorc  go.nanorc  groff.nanorc  guile.nanorc  html.nanorc  javascript.nanorc  json.nanorc  lua.nanorc  makefile.nanorc  man.nanorc  markdown.nanorc  mgp.nanorc  nanohelp.nanorc  nanorc.nanorc  nftables.nanorc  objc.nanorc  patch.nanorc  perl.nanorc  php.nanorc  po.nanorc  postgresql.nanorc  pov.nanorc  python.nanorc  ruby.nanorc  rust.nanorc  sh.nanorc  spec.nanorc  sql.nanorc  tcl.nanorc  texinfo.nanorc  xml.nanorc  (+1 more)
syntax/extra/: fortran.nanorc  gentoo.nanorc  haskell.nanorc
