pkgdata_DATA =	asm.nanorc \
		awk.nanorc \
		cmake.nanorc \
		c.nanorc \
		css.nanorc \
		debian.nanorc \
		fortran.nanorc \
		gentoo.nanorc \
		groff.nanorc \
		html.nanorc \
		java.nanorc \
		lua.nanorc \
		makefile.nanorc \
		man.nanorc \
		mgp.nanorc \
		mutt.nanorc \
		nanorc.nanorc \
		objc.nanorc \
		ocaml.nanorc \
		patch.nanorc \
		perl.nanorc \
		php.nanorc \
		pov.nanorc \
		python.nanorc \
		ruby.nanorc \
		sh.nanorc \
		spec.nanorc \
		tcl.nanorc \
		tex.nanorc \
		xml.nanorc

EXTRA_DIST = $(pkgdata_DATA)
